# godot-avbridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: main.gd  main.gd.uid  main.tscn  project.godot
demo/addons/godot-avbridge/: godot-avbridge.gdextension  godot-avbridge.gdextension.uid
src/: register_types.cpp  register_types.hpp  video_stream_avbridge.cpp  video_stream_avbridge.hpp  video_stream_playback_avbridge.cpp  video_stream_playback_avbridge.hpp
